<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">
    <group android:checkableBehavior="single">

        <item
            android:id="@+id/homeFragment"
            android:icon="@drawable/ic_globe"
            android:title="@string/language" />
        <item
            android:id="@+id/salonFragment"
            android:icon="@drawable/ic_share"
            android:title="@string/share_an_app" />
        <item
            android:id="@+id/specialistsFragment"
            android:icon="@drawable/ic_briefcase"
            android:title="@string/beApp_business" />
        <item
            android:id="@+id/verifyAppointmentFragment"
            android:icon="@drawable/ic_shield"
            android:title="@string/service_support" />

    </group>
</menu>