<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/bg_day"
    tools:context=".presentation.ui.fragments.main.home.HomeFragment">

    <androidx.appcompat.widget.Toolbar
        android:id="@+id/toolbar"
        style="@style/baseToolbar"
        android:layout_width="match_parent"
        android:layout_height="?actionBarSize"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:navigationIcon="@drawable/ic_burger_menu">

        <TextView
            style="@style/BaseToolbarTitle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/name_beapp" />

    </androidx.appcompat.widget.Toolbar>

    <SearchView
        android:id="@+id/search_view"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="16dp"
        android:layout_marginTop="30dp"
        android:layout_marginBottom="16dp"
        android:background="@drawable/searchview_background"
        android:iconifiedByDefault="false"
        android:queryBackground="@color/transparent"
        android:queryHint="@string/hint_search"
        android:searchIcon="@null"
        app:layout_constraintTop_toBottomOf="@id/toolbar" />

    <TextView
        android:id="@+id/tv_service_categories"
        style="@style/baseTextViewServices"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:text="@string/categories"
        app:layout_constraintStart_toStartOf="@id/search_view"
        app:layout_constraintTop_toBottomOf="@id/search_view" />

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/recycler_view_categories"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
        app:layout_constraintTop_toBottomOf="@id/tv_service_categories"
        tools:listitem="@layout/item_categories" />

    <TextView
        android:id="@+id/tv_service_popular"
        style="@style/baseTextViewServices"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:text="@string/services_popular"
        app:layout_constraintStart_toStartOf="@id/tv_service_categories"
        app:layout_constraintTop_toBottomOf="@id/recycler_view_categories" />

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/recycler_view_popular"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:orientation="vertical"
        app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintTop_toBottomOf="@id/tv_service_popular"
        tools:listitem="@layout/item_popular" />

</androidx.constraintlayout.widget.ConstraintLayout>